section2/functions.tf
# Example of functions usage 
# Every function is built in terraform in this file
provider "aws" {
    region = "sa-east-1"
}

# timestamp() returns the current date, and formatdate
# format the returned value of timestamp
locals {
  time = formatdate("DD MMM YYYY hh:mm ZZZ", timestamp())
}

variable "region" {
  default = "ap-south-1"
}

variable "tags" {
  type = list
  default = ["firstec2","secondec2"]
}

variable "ami" {
  type = map
  default = {
    "us-east-1" = "ami-0323c3dd2da7fb37d"
    "us-west-2" = "ami-0d6621c01e8c2de2c"
    "ap-south-1" = "ami-0470e33cd681b2476"
  }
}

# function file(path) retrives the information of a file and returns as a string
resource "aws_key_pair" "loginkey" {
  key_name   = "login-key"
  public_key = file("${path.module}/id_rsa.pub")
}

# lookup(map, key , default) get the value of map based on key, but we can specify a default value
# is the same that var.ami[var.region]

# element(list, index) get the value of index
resource "aws_instance" "app-dev" {
   ami = lookup(var.ami,var.region)
   instance_type = "t2.micro"
   key_name = aws_key_pair.loginkey.key_name
   count = 2

   tags = {
     Name = element(var.tags,count.index)
   }
}

# output block to see the returned format date
output "timestamp" {
  value = local.time
}
